--- a/index.html
+++ b/index.html
@@ -563,7 +563,7 @@
 
       <div class="journal-card visible animate-on-scroll" style="margin-top: 80px;" onclick="openModal('meme')">
         <div class="media-frame meme-frame hover-trigger">
-          <img class="media-img" src="cat.png" alt="Meme">
+          <img class="media-img" src="CatMeme.png" alt="Meme">
         </div>
         <div class="journal-info">
           <span class="meta-tag">Culture & Insight</span>
